chore: 주석 제거